fixed tests added schema registry helpers